--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,7 @@ body {
 
 
 .jumbotron {
-	background-image: url(../img/header-bg.jpg);
+	background-image: url(../img/jumbo.jpg);
 	background-attachment: fixed;
 	background-size: cover;
 	background-position: 0 -200px;
